// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Autocomplete /> ControlledOpen story renders snapshot 1`] = `
<div
  style="margin: 16px 0px 0px 24px; width: 274px;"
>
  <div>
    <label
      class="css-l5xdrx"
      for="location-search"
    >
      Search by label
    </label>
    <div
      class="MuiFormControl-root MuiTextField-root css-1crfn7w-MuiFormControl-root-MuiTextField-root"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart MuiInputBase-adornedEnd css-2ehmn7-MuiInputBase-root-MuiOutlinedInput-root"
        inputmode="text"
      >
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-outlined MuiInputAdornment-sizeSmall css-3b46cg-MuiInputAdornment-root"
        >
          <span
            class="notranslate"
          >
            ​
          </span>
          <button
            aria-label="search-button"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1owsdxw-MuiButtonBase-root-MuiIconButton-root"
            icon="Search"
            tabindex="0"
            type="button"
          >
            <div
              class="css-1ft6wgl"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-tr2xv3-MuiSvgIcon-root"
                data-file-name="IconSearchSmall"
                data-testid="IconSearchSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <input
          aria-invalid="false"
          autocomplete="one-time-code"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputTypeSearch MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-16slxrv-MuiInputBase-input-MuiOutlinedInput-input"
          id="location-search"
          placeholder="Search by label"
          type="search"
          value=""
        />
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeSmall css-1is7ehy-MuiInputAdornment-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
          />
        </div>
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-ihdtdm"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class="base-Popper-root css-1hqzuq8-MuiPopper-root"
      data-popper-escaped=""
      data-popper-placement="bottom-start"
      data-popper-reference-hidden=""
      role="tooltip"
      style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="SdsAutocompleteMultiColumn-wrapper css-ov1ktg"
      >
        <div
          class="SdsAutocompleteMultiColumn-column-root css-1451ohq"
          width="260"
        >
          <span
            class="SdsAutocompleteMultiColumn-column-relation-icon css-19gs2ff"
          >
            <div
              class="css-1ft6wgl"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-25m3b5-MuiSvgIcon-root"
                data-file-name="IconChevronRightSmall"
                data-testid="IconChevronRightSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
          <p
            class="SdsAutocompleteMultiColumn-column-title css-ederv3"
          >
            Column One
          </p>
          <div
            aria-owns="autocomplete-demo-listbox"
            class="MuiAutocomplete-root Mui-expanded MuiAutocomplete-hasPopupIcon css-1r9rja7-MuiAutocomplete-root"
            label="Search by label"
          >
            <div
              class="css-12r08e9"
            >
              <label
                class="css-l5xdrx"
                for="location-search"
              >
                Search by label
              </label>
              <div
                class="MuiFormControl-root MuiTextField-root css-5o0g6q-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart MuiInputBase-adornedEnd css-2ehmn7-MuiInputBase-root-MuiOutlinedInput-root"
                  inputmode="none"
                >
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-outlined MuiInputAdornment-sizeSmall css-3b46cg-MuiInputAdornment-root"
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                    <button
                      aria-label="search-button"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1owsdxw-MuiButtonBase-root-MuiIconButton-root"
                      icon="Search"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="css-1ft6wgl"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-tr2xv3-MuiSvgIcon-root"
                          data-file-name="IconSearchSmall"
                          data-testid="IconSearchSmall"
                          fillcontrast="white"
                          focusable="false"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        />
                      </div>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <input
                    aria-autocomplete="list"
                    aria-controls="autocomplete-demo-listbox"
                    aria-expanded="true"
                    aria-invalid="false"
                    autocapitalize="none"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputTypeSearch MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-16slxrv-MuiInputBase-input-MuiOutlinedInput-input"
                    id="autocomplete-demo"
                    placeholder="Search by label"
                    role="combobox"
                    spellcheck="false"
                    type="search"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeSmall css-1is7ehy-MuiInputAdornment-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
                    />
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-ihdtdm"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="base-Popper-root MuiAutocomplete-popper MuiAutocomplete-popperDisablePortal css-1rndd9j-MuiPopper-root-MuiAutocomplete-popper"
            data-popper-escaped=""
            data-popper-placement="bottom"
            data-popper-reference-hidden=""
            role="presentation"
            style="width: 0px; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAutocomplete-paper css-100c8gn-MuiPaper-root-MuiAutocomplete-paper"
            >
              <ul
                aria-labelledby="autocomplete-demo-label"
                class="MuiAutocomplete-listbox css-gdh49b-MuiAutocomplete-listbox"
                id="autocomplete-demo-listbox"
                role="listbox"
              >
                <li
                  aria-disabled="false"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="0"
                  id="autocomplete-demo-option-0"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1k1xg99"
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Status: can't reproduce
                      </div>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </li>
                <li
                  aria-disabled="false"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="1"
                  id="autocomplete-demo-option-1"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1k1xg99"
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Status: confirmed
                      </div>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </li>
                <li
                  aria-disabled="false"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="2"
                  id="autocomplete-demo-option-2"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1k1xg99"
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Status: duplicate
                      </div>
                    </span>
                    <span
                      class="css-1o15svb"
                    >
                      3
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </li>
                <li
                  aria-disabled="false"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="3"
                  id="autocomplete-demo-option-3"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1k1xg99"
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Status: needs information
                      </div>
                    </span>
                    <span
                      class="css-1o15svb"
                    >
                      5
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </li>
                <li
                  aria-disabled="false"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="4"
                  id="autocomplete-demo-option-4"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1k1xg99"
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Status: wont do/fix
                        <div
                          class="menuItem-details css-3gjguy"
                        >
                          This will not be worked on
                        </div>
                      </div>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </li>
                <li
                  aria-disabled="false"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="5"
                  id="autocomplete-demo-option-5"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1k1xg99"
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Status: work in progress
                        <div
                          class="menuItem-details css-3gjguy"
                        >
                          This is still in progress
                        </div>
                      </div>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="SdsAutocompleteMultiColumn-column-root css-1451ohq"
          width="260"
        >
          <span
            class="SdsAutocompleteMultiColumn-column-relation-icon css-19gs2ff"
          >
            <div
              class="css-1ft6wgl"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-25m3b5-MuiSvgIcon-root"
                data-file-name="IconChevronRightSmall"
                data-testid="IconChevronRightSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
          <p
            class="SdsAutocompleteMultiColumn-column-title css-ederv3"
          >
            Column Two
          </p>
          <div
            aria-owns="autocomplete-demo-listbox"
            class="MuiAutocomplete-root Mui-expanded MuiAutocomplete-hasPopupIcon css-1r9rja7-MuiAutocomplete-root"
            label="Search by label"
          >
            <div
              class="css-12r08e9"
            >
              <label
                class="css-l5xdrx"
                for="location-search"
              >
                Search by label
              </label>
              <div
                class="MuiFormControl-root MuiTextField-root css-5o0g6q-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart MuiInputBase-adornedEnd css-2ehmn7-MuiInputBase-root-MuiOutlinedInput-root"
                  inputmode="none"
                >
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-outlined MuiInputAdornment-sizeSmall css-3b46cg-MuiInputAdornment-root"
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                    <button
                      aria-label="search-button"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1owsdxw-MuiButtonBase-root-MuiIconButton-root"
                      icon="Search"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="css-1ft6wgl"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-tr2xv3-MuiSvgIcon-root"
                          data-file-name="IconSearchSmall"
                          data-testid="IconSearchSmall"
                          fillcontrast="white"
                          focusable="false"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        />
                      </div>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <input
                    aria-autocomplete="list"
                    aria-controls="autocomplete-demo-listbox"
                    aria-expanded="true"
                    aria-invalid="false"
                    autocapitalize="none"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputTypeSearch MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-16slxrv-MuiInputBase-input-MuiOutlinedInput-input"
                    id="autocomplete-demo"
                    placeholder="Search by label"
                    role="combobox"
                    spellcheck="false"
                    type="search"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeSmall css-1is7ehy-MuiInputAdornment-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
                    />
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-ihdtdm"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="base-Popper-root MuiAutocomplete-popper MuiAutocomplete-popperDisablePortal css-1rndd9j-MuiPopper-root-MuiAutocomplete-popper"
            data-popper-escaped=""
            data-popper-placement="bottom"
            data-popper-reference-hidden=""
            role="presentation"
            style="width: 0px; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAutocomplete-paper css-100c8gn-MuiPaper-root-MuiAutocomplete-paper"
            >
              <ul
                aria-labelledby="autocomplete-demo-label"
                class="MuiAutocomplete-listbox css-gdh49b-MuiAutocomplete-listbox"
                id="autocomplete-demo-listbox"
                role="listbox"
              >
                <li
                  aria-disabled="false"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="0"
                  id="autocomplete-demo-option-0"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1k1xg99"
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Type: bug
                        <div
                          class="menuItem-details css-3gjguy"
                        >
                          This will be worked on
                        </div>
                      </div>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </li>
                <li
                  aria-disabled="false"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="1"
                  id="autocomplete-demo-option-1"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1k1xg99"
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Type: discussion
                      </div>
                    </span>
                    <span
                      class="css-1o15svb"
                    >
                      4
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </li>
                <li
                  aria-disabled="false"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="2"
                  id="autocomplete-demo-option-2"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1k1xg99"
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Type: documentation
                      </div>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </li>
                <li
                  aria-disabled="false"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="3"
                  id="autocomplete-demo-option-3"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1k1xg99"
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Type: enhancement
                      </div>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </li>
                <li
                  aria-disabled="false"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="4"
                  id="autocomplete-demo-option-4"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1k1xg99"
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Type: epic
                      </div>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </li>
                <li
                  aria-disabled="true"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root Mui-disabled MuiMenuItem-gutters Mui-disabled MuiMenuItem-root Mui-disabled MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="5"
                  id="autocomplete-demo-option-5"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      disabled=""
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1wkj2yd"
                      disabled=""
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Type: feature request
                      </div>
                    </span>
                  </span>
                </li>
                <li
                  aria-disabled="false"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters MuiAutocomplete-option css-pelx1i-MuiButtonBase-root-MuiMenuItem-root"
                  data-option-index="6"
                  id="autocomplete-demo-option-6"
                  role="option"
                  tabindex="-1"
                >
                  <span
                    class="css-1715doo"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium check-icon css-4wl0oy-MuiSvgIcon-root"
                      data-testid="CheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-bv5fko"
                  >
                    <span
                      class="primary-text css-1k1xg99"
                    >
                      <div
                        class="css-1iyoj2o"
                      >
                        Type: question
                      </div>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Autocomplete /> Default story renders snapshot 1`] = `
<div
  style="margin: 16px 0px 0px 24px; width: 274px;"
>
  <div
    class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-varg9y-MuiAutocomplete-root"
    label="Search by label"
  >
    <div
      class="css-1oteowz"
    >
      <label
        class="css-l5xdrx"
        for="location-search"
      >
        Search by label
      </label>
      <div
        class="MuiFormControl-root MuiTextField-root css-1opgyxy-MuiFormControl-root-MuiTextField-root"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart MuiInputBase-adornedEnd css-2ehmn7-MuiInputBase-root-MuiOutlinedInput-root"
          inputmode="text"
        >
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-outlined MuiInputAdornment-sizeSmall css-3b46cg-MuiInputAdornment-root"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
            <button
              aria-label="search-button"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1owsdxw-MuiButtonBase-root-MuiIconButton-root"
              icon="Search"
              tabindex="0"
              type="button"
            >
              <div
                class="css-1ft6wgl"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-tr2xv3-MuiSvgIcon-root"
                  data-file-name="IconSearchSmall"
                  data-testid="IconSearchSmall"
                  fillcontrast="white"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                />
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-invalid="false"
            autocapitalize="none"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputTypeSearch MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-16slxrv-MuiInputBase-input-MuiOutlinedInput-input"
            id="autocomplete-demo"
            placeholder="Search by label"
            role="combobox"
            spellcheck="false"
            type="search"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeSmall css-1is7ehy-MuiInputAdornment-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            />
          </div>
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-ihdtdm"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;
